--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_local_notifications:
   flutter_native_timezone:
   sqflite:
+  flutter_staggered_animations:
 
 
 dev_dependencies:
